...
    modifier: Modifier = Modifier,
    onDispose: (Int) -> Unit,
) {
    Box(modifier = modifier.fillMaxWidth(), contentAlignment = Alignment.TopCenter) {
        Column(horizontalAlignment = Alignment.CenterHorizontally) {
            floaters.forEachIndexed { index, item ->
                val tag = if (index == floaters.lastIndex) {
                    if (side == BattleFloaterSide.Player) {
                        "BattleDamageFloaterLabel_player"
                    } else {
                        "BattleDamageFloaterLabel_monster"
                    }
                } else {
...
